packages/parser/test/parser/E0123-is-expression.txt
a := test is 1
===== err =====
anonymous:1:13: ParseError: E0123 - Expected type after `is` keyword
1 | a := test is 1
  |             ^
